# HTTPServer

./: CMakeLists.txt  README.md  main.cpp
files/: Server.cpp  Server.h  main.cpp
files/requests/abstractRequest/: AbstractRequest.cpp  AbstractRequest.h
files/requests/badRequest/: BadRequest.cpp  BadRequest.h
files/requests/deleteRequest/: DeleteRequest.cpp  DeleteRequest.h
files/requests/getRequest/: GetRequest.cpp  GetRequest.h
files/requests/headRequest/: HeadRequest.cpp  HeadRequest.h
files/requests/putRequest/: PutRequest.cpp  PutRequest.h
